@@ -2,6 +2,7 @@ export(convert)
 export(export)
 export(import)
 importFrom(tools, file_ext)
+importFrom(data.table, fread)
 importFrom(haven, read_dta, read_sav, read_por, read_sas)
 importFrom(haven, write_sav, write_dta)
 importFrom(foreign, read.dbf, read.mtp, read.systat, read.epiinfo, read.arff, read.xport)
