@@ -7,6 +7,7 @@
 \arguments{
     \item{file}{A character string naming a file, URL, or single-file .zip or .tar archive.}
     \item{format}{An optional character string code of file format, which can be used to override the format inferred from \code{file}. Shortcuts include: \dQuote{,} (for comma-separated values), \dQuote{;} (for semicolon-separated values), and \dQuote{|} (for pipe-separated values).}
+    \item{fread}{A logical indicating whether to use \code{\link[data.table]{fread}} for reading in delimited text files. It is ignored for all other file types. Default is \code{TRUE}. If \code{TRUE}, the default is to return a data.frame structure, rather than \code{fread}'s default of a data.table; to obtain a data.table, pass an additional \code{data.table = TRUE} argument to \code{import}.}
     \item{...}{Additional arguments for the underlying import functions.}
 }
 \value{An R data.frame.}
@@ -15,9 +16,9 @@
 \code{import} supports the following file formats:
 
 \itemize{
-    \item Tab-separated data (.tsv), using \code{\link[utils]{read.table}} with \code{row.names = FALSE} and \code{stringsAsFactors = FALSE}
-    \item Comma-separated data (.csv), using \code{\link[utils]{read.csv}} with \code{row.names = FALSE} and \code{stringsAsFactors = FALSE}
-    \item Pipe-separated data (.psv), using \code{\link[utils]{read.table}} with \code{sep = '|'}, \code{row.names = FALSE}, and \code{stringsAsFactors = FALSE}
+    \item Tab-separated data (.tsv), using \code{\link[utils]{read.table}} with \code{row.names = FALSE} and \code{stringsAsFactors = FALSE} (or, if \code{fread = TRUE}, \code{\link[data.table]{fread}})
+    \item Comma-separated data (.csv), using \code{\link[utils]{read.csv}} with \code{row.names = FALSE} and \code{stringsAsFactors = FALSE} (or, if \code{fread = TRUE}, \code{\link[data.table]{fread}})
+    \item Pipe-separated data (.psv), using \code{\link[utils]{read.table}} with \code{sep = '|'}, \code{row.names = FALSE}, and \code{stringsAsFactors = FALSE} (or, if \code{fread = TRUE}, \code{\link[data.table]{fread}})
     \item Fixed-width format data (.fwf), using \code{\link[utils]{read.fwf}} (which requires a \code{widths} argument and by default in rio has \code{stringsAsFactors = FALSE}
     \item Serialized R objects (.rds), using \code{\link[base]{readRDS}}
     \item Saved R objects (.RData), using \code{\link[base]{load}} for single-object .Rdata files
