@@ -1,5 +1,6 @@
 # CHANGES TO v0.1.3 #
 
+ * Use `data.table::fread` by default for reading delimited files. (#3)
  * Added support for import and export of `dput` and `dget` objects. (#10)
  * Added support for reading from compressed archives (.zip and .tar).
  * Added experimental support for writing to fixed-width format.
